<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">tranquilo</string>
    <string name="noInternet">لا يوجد اتصال انترنت</string>
    <string name="serverError">خطأ اتصال الخادم</string>
    <string name="ord_arrived">لقد قمت بطلب أوردر</string>
    <string name="prcTxt">السعر</string>
    <string name="note">قم بالذهاب إلى النقطة ثم اتصل بالرقم الموضح</string>
    <string name="toCancel">لالغاء الأوردر اضغط هنا</string>
    <string name="cancelOrd">الغاء</string>
    <string name="num">العدد</string>
    <string name="createOrder">طلب أوردر</string>
    <string name="chooseNum">اختر العدد</string>
    <string name="entPh">أدخل رقم الموبايل</string>
    <string name="phone">رقم الموبايل</string>
    <string name="pho_">الموبايل</string>
    <string name="pas_">الباسوورد</string>
    <string name="phone_validate">0123456789</string>
    <string name="password_validate">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@#$%</string>
    <string name="proceed">تأكيد الطلب</string>
    <string name="gpsNA">"هناك حجب للجى بى اس "</string>
    <string name="moveForGps">"قف فى مكان مفتوح حتى يستطيع القمر الصناعى تحديث بياناتك جيدا "</string>
    <string name="ar_go_enable_permission"> عزيزى العميل من فضلك قم بالذهاب الى الأذونات أو الترخيص وتفعيل اذن الموقع الجغرافى لتطبيق tranquilo</string>
    <string name="en_go_enable_permission">Dear user you should enable Location permission for tranquilo</string>
    <string name="gotIt">فهمت</string>
    <string name="success_order">تهانينا</string>
    <string name="suc_note">تم طلب أوردر بنجاح</string>
    <string name="ok">تمام</string>
    <string name="nt">مواعيد العمل</string>
    <string name="from">من</string>
    <string name="to">الى</string>
    <string name="today">اليوم</string>
    <string name="laterNote">سيتم تحديد مواعيد العمل اليوم</string>
    <string name="finishedNote">تم انتهاء العمل اليوم , يرجى زيارتنا غدا</string>
    <string name="old_v">نسخة قديمة</string>
    <string name="new_v">هناك نسخة جديدة للتطبيق يجب تنزيلها</string>
    <string name="down_v">اضغط لتنزيل النسخة الجديدة</string>
    <string name="ntg">بعد تنزيل النسخة الجديدة قم بتثبيتها</string>
    <string name="ntr">اذا لم يفتح الرابط قم بنسخ الرابط واذهب للمتصفح للتنزيل</string>
    <string name="cp">نسخ</string>
    <string name="reopenLoc">من فضلك اعمل ريفرش وقم بتشغيل اللوكيشن</string>
    <string name="reacceptPerm">من فضلك اعمل ريفرش و اقبل الاذن</string>
    <string name="Ar_failed">هذة المنطقة خارج الخدمة اليوم</string>
    <string name="aNote">سيتم دعم منطقتك قريبا</string>
    <string name="sn_word">الكود</string>
    <string name="pressToGo">اضغط هنا للذهاب للنقطة</string>
    <string name="logout">خروج</string>
    <string name="login_button">تسجيل دخول</string>
    <string name="blocked">أنت محظور</string>
    <string name="blocked_note">أنت ممنوع من الدخول لحين اشعار اخر</string>
    <string name="oC">الساعة</string>
    <string name="oD">يوم</string>
    <string name="new_u">مستخدم جديد !؟</string>
    <string name="enterCode">أدخل الكود ١٤</string>
    <string name="suc_reg">تم انشاء حساب بنجاح</string>
    <string name="reg_nt">يمكنك تسجيل الدخول بحسابك</string>
    <string name="okay">OK</string>
    <string name="new_acc">انشاء حساب جديد</string>
    <string name="entPas">اختر باسوورد</string>
    <string name="crt_acc">انشـاء حساب</string>
    <string name="loc_chn">تم تغيير نقطة الالتقاء اضغط للوصول</string>
    <string name="time_out">انتهى وقت العمل</string>
    <string name="time_out_note">سنقوم بعمل ريفرش</string>
    <string name="willEnd">سينتهى</string>
    <string name="nowWork">يعمل الأن</string>
    <string name="want_logout">"هل تريد تسجيل الخروج ؟"</string>
    <string name="want_cancel_ord">"هل تريد الغاء الأوردر ؟"</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="cur">ج.م</string>
    <string name="RegCodeErr">الكود لا يقل عن ١٤</string>
    <string name="ph_em">الموبايل فارغ</string>
    <string name="ph_ln">الموبايل لا يقل عن ١١ رقم</string>
    <string name="ph_wr">رقم موبايل خاطئ</string>
    <string name="ps_em">باسوورد فارغه</string>
    <string name="ps_ln">الباسوورد لا تقل عن ٦</string>
    <string name="choose_num_pls">قم باختيار العدد</string>
    <string name="gf_coupon">كوبون هدية</string>
    <string name="enter_w_n">قم بإدخال رقم محفظة كاش لإستلام هديتك ..</string>
    <string name="w_n">* رقم محفظة كاش</string>
    <string name="w_n_added">* تم إدخال رقم المحفظة , انتظر التحويل .</string>
    <string name="fb_nt_1">** قم بإرسال شكوى أو تقديم اقتراح لتطوير التطبيق ..</string>
    <string name="fb_nt_2">** اذا كنت تريد العمل معنا , أرسل لنا اسمك وسنك ورابط حساب الفيسبوك الخاص بك ..</string>
    <string name="send">$ ارسال $</string>
    <string name="invalid_code">كود غير صالح</string>
    <string name="already_registered">حساب موجود بالفعل</string>
    <string name="notExists">حساب غير موجود</string>
    <string name="wrong_password">باسوورد خاطئة</string>
    <string name="noGift">ليس لديك هدايا</string>
    <string name="empty_message">رسالة فارغة</string>
    <string name="brought">brought to you by</string>
    <string name="temsah">التمـســـاح</string>
</resources>