<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_200sdp"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:elevation="@dimen/_4sdp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/lrc"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_12sdp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:src="@drawable/outdated" />


    <TextView
        android:id="@+id/chw"
        android:layout_width="@dimen/_154sdp"
        android:layout_height="wrap_content"
        android:layout_below="@id/lrc"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:fontFamily="@font/droid_serif"
        android:gravity="center"
        android:text="@string/new_v"
        android:textColor="@color/green"
        android:textSize="@dimen/ovt"
        android:textStyle="bold" />

    <Button
        android:id="@+id/doBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chw"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/_12sdp"
        android:gravity="center"
        android:maxWidth="@dimen/_100sdp"
        android:padding="@dimen/_5sdp"
        android:fontFamily="@font/droid_serif"
        android:textAllCaps="false"
        android:text="@string/down_v"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/kk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/doBtn"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/droid_serif"
            android:text="@string/ntr"
            android:textColor="@color/white"
            android:textSize="@dimen/_8ssp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:padding="@dimen/_3sdp"
            android:fontFamily="@font/droid_serif"
            android:textColor="@color/nile"
            android:textSize="@dimen/_9ssp"
            android:textIsSelectable="true"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:paddingStart="@dimen/_8sdp"
            tools:ignore="RtlSymmetry">

            <ImageButton
                android:id="@+id/copy"
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                android:scaleType="centerInside"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:layout_marginEnd="@dimen/_3sdp"
                android:src="@drawable/ic_copy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cp"
                android:fontFamily="@font/droid_serif"
                android:textColor="@color/nile"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/cua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/kk"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/_15sdp"
        android:gravity="center"
        android:fontFamily="@font/droid_serif"
        android:text="@string/ntg"
        android:textColor="@color/green"
        android:textSize="@dimen/_9ssp"
        android:textStyle="bold" />

</RelativeLayout>