<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_260sdp"
    android:layout_height="@dimen/_180sdp"
    android:background="@drawable/giftcard_bg"
    android:focusableInTouchMode="true"
    android:layoutDirection="ltr">

    <View
        android:layout_width="@dimen/_2sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_8sdp"
        android:background="@color/mastard" />

    <ImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_gift_black" />

    <TextView
        android:id="@+id/kh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/droid_serif"
        android:text="@string/gf_coupon"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <LinearLayout
        android:id="@+id/fk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/kh"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:fontFamily="@font/libertine"
            android:gravity="center"
            android:text="@string/cur"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/g_value"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_green"
            android:fontFamily="@font/sty"
            android:gravity="center"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_4sdp"
            android:paddingVertical="@dimen/_3sdp"
            android:textColor="@color/mainBlack"
            android:textSize="@dimen/_17ssp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/w_note"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="wrap_content"
        android:layout_below="@id/fk"
        android:layout_alignEnd="@id/w_L"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/droid_serif"
        android:gravity="start"
        android:text="@string/enter_w_n"
        android:textColor="@color/mastard"
        android:textSize="@dimen/_8ssp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/w_L"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_25sdp"
        android:layout_below="@id/w_note"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_5sdp">

        <EditText
            android:id="@+id/wallet_number"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="@drawable/bg_off"
            android:digits="@string/phone_validate"
            android:fontFamily="@font/droid_serif"
            android:gravity="center"
            android:hint=""
            android:inputType="numberDecimal"
            android:maxLength="11"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            tools:ignore="LabelFor"
            android:enabled="false"
            android:clickable="false"/>

        <ImageButton
            android:id="@+id/send_w_num"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_7sdp"
            android:background="@drawable/btn_grey_off"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/ic_d_arrow"
            android:clickable="false"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/w_n_note"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="wrap_content"
        android:layout_below="@id/w_L"
        android:layout_alignEnd="@id/w_L"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_3sdp"
        android:fontFamily="@font/droid_serif"
        android:gravity="start"
        android:text="@string/w_n_added"
        android:textColor="@color/white"
        android:textSize="@dimen/_8ssp"
        android:textStyle="bold" />

</RelativeLayout>